update aspec ratio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # How to Teach Reproducibility in Classwork
 ## Western Economic Association International
 ### Fernando Hoces, </br> Berkeley Initiative for Transparency in the Social Sciences
-### 08 July 2020 | <a href="https://github.com/BITSS/ACRE/tree/master/slides">slides</a>
+### 10 July 2020 | <a href="https://github.com/BITSS/ACRE/tree/master/slides">slides</a>
 
 ---
 
@@ -452,7 +452,7 @@ background-position: 100% 0%
 .pull-left[
 .font100[
 Each **reproduction attempt** &lt;/br&gt;
-is center around scientific &lt;/br&gt;
+is centered around scientific &lt;/br&gt;
 **claims**
 
 One paper can contain  
@@ -652,7 +652,7 @@ background-position: 0% 100%
 
 # .font70[Identify All the Elements Behind a Display Item]
 
-Reproducers will be asked to draw a clear connection to from the raw data sources mentioned in the paper and the display item under reproduction. 
+Reproducers will be asked to draw a clear connection to the raw data sources mentioned in the paper and the display item under reproduction. 
 --
 
 ### Data sources  
@@ -1167,7 +1167,7 @@ background-position: 0% 100%, 100% 60%
 
 # Robustness
 
-**Robustness checks:** any possible change in a computational choice, both in data analysis and data cleaning,
+**Robustness checks:** any possible change in a computational choice, both in data analysis and data cleaning
 --
 
 .pull-left[
@@ -1340,7 +1340,7 @@ count:false
                               └───[data] admin_01raw.csv* 
 ```
 
-&gt;I have marked with an asterix (\*) the items that I could not find in the reproduction materials: data_cleaning01.R and admin_01raw.csv. After accessing these files, I will also be able to identify the name of the raw data set required to obtain output1_part1.txt. This is to let you know that I may need to contact you again if I cannot find this file (labeled as UNKNOWN above) in the reproduction materials.
+&gt;I have marked with an asterisk (\*) the items that I could not find in the reproduction materials: data_cleaning01.R and admin_01raw.csv. After accessing these files, I will also be able to identify the name of the raw data set required to obtain output1_part1.txt. This is to let you know that I may need to contact you again if I cannot find this file (labeled as UNKNOWN above) in the reproduction materials.
 &gt;
 &gt;I understand that this request will require some work for you or somebody in your research group, but I want to assure you that I will add these missing files to the reproduction package for your paper on the ACRE platform. Doing this will ensure that you will not be asked twice for the same missing file.
 ]
@@ -1368,7 +1368,7 @@ count:false
 *                             └───[data] admin_01raw.csv* 
 ```
 
-&gt;I have marked with an asterix (\*) the items that I could not find in the reproduction materials: **data_cleaning01.R** and **admin_01raw.csv**. After accessing these files, I will also be able to identify the name of the raw data set required to obtain output1_part1.txt. This is to let you know that I may need to contact you again if I cannot find this file (labeled as **UNKNOWN** above) in the reproduction materials.
+&gt;I have marked with an asterisk (\*) the items that I could not find in the reproduction materials: **data_cleaning01.R** and **admin_01raw.csv**. After accessing these files, I will also be able to identify the name of the raw data set required to obtain output1_part1.txt. This is to let you know that I may need to contact you again if I cannot find this file (labeled as **UNKNOWN** above) in the reproduction materials.
 &gt;
 &gt;I understand that this request will require some work for you or somebody in your research group, but I want to assure you that I will add these missing files to the reproduction package for your paper on the ACRE platform. **Doing this will ensure that you will not be asked twice for the same missing file.**
 ]
@@ -1548,7 +1548,7 @@ exclude: true
 - Most data from reproduction attempts will be made public  
   - Any data that is not made public, will be anonymized and then made public.
   
-- Data will be release in a staggered fashion: 
+- Data will be released in a staggered fashion: 
   - Early release for reproducers: 3-6 Months after submission. 
   - General public: 6 months after submissions. 
   
@@ -1688,7 +1688,7 @@ name: part2
 
 - By code git understands any type of plain text file (`myfile.R`, `myfile.do`, `.tex/.md/.txt/.csv/.etc`).
 
-- This types of files can be understood as "human readable" as machine and human see the same fie. 
+- This type of file can be understood as "human readable" as machine and human see the same fie. 
 
 - Files that are "non-human readable" are called binary files (`myfile.docx`, `myfile.xlxs`, `.pdf/.exe/.dta/.etc`).
 
@@ -1713,7 +1713,7 @@ name: part2
 
 --
 
-**Secondary Goal:** Learn how to collaborate with others using Github.   
+**Secondary Goal:** learn how to collaborate with others using Github.   
 
 --
 
@@ -1721,7 +1721,7 @@ name: part2
 
 ---
 # Strategy 1:  
-1 - Agree on a naming convention with you co-authors (eg: YYYYMMDDfilename_INITALS).  
+1 - Agree on a naming convention with your co-authors (eg: YYYYMMDDfilename_INITALS).  
 2 - Begin working from the last saved version (eg: `20180325demo_FH.do`).  
 3 - At the end of the day, save on a new version (eg: `20180327demo_FH.do`).  
 
@@ -1792,13 +1792,13 @@ talk about undo here
 1 -  Create [github.com](github.com) account and sign in.   
 2 -  Let's look at some **repos**.   
 3 -  First way to access content: download.   
-4 -  What if you want to have your own copy of the repo? **Fork** it!.  
+4 -  What if you want to have your own copy of the repo? **Fork** it!  
 5 -  Now create your own repo. Initiate readme and make some edits.   
 
 ---
 # Demo #1: We move to our local computer 
 
-6 - Clone the it. Explore the files and location.   
+6 - Clone the repo. Explore the files and location.   
 7 - Create new files, edit. And commit. Edit again, and commit again.   
 8 - Push. Edit on github.com, and pull.   
 9 - For this tutorial, best way to access previous version: explore in github.com and download.
@@ -2017,7 +2017,7 @@ Some good habits:
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
-"ratio": "16:9",
+"ratio": "4:3",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false
